--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 body{
 	font-size: 16px;
 	color: #bbb;
-	background-color: #b2dfdb ;
+	background-color: #f4ff81 ;
 	font-family: 'Oxygen',san-serif;
 }
 
 /** Header**/
 
 #header-nav{
-	background-color: #4B515D;
+	background-color:#ffeb3b ;
 	border-radius: 10px;
 	border: 0;
 }
 
 #logo-img{
 	background :url('logo1.jpg') no-repeat;
-	width: 100px;
-	height: 100px;
+	width: 100%;
+	height: 100%;
 	margin: 10px 15px 10px 0;
 }
 
@@ -27,7 +27,7 @@ body{
 
 .navbar-brand h1{/* brand name*/
 	font-family: 'Lora', serif;
-	color: #b2dfdb;
+	color: #bf360c;
 	font-size: 1.5em;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -44,7 +44,7 @@ body{
 }
 
 .navbar-brand p{/* title*/
-	color: #00acc1;
+	color: #ff3d00 ;
 	test-tranform:uppercase;
 	font-size: 190% ;
 	margin-top: 15px;
@@ -92,7 +92,7 @@ body{
     }
 
 	.container .jumbotron{
-		background:url('pic1_768.jpg') no-repeat;
+		background:url('pic1_1200px.jpg') no-repeat;
 		height: 675px;
 		box-shadow: 0 0 50px #59698d;
 		border: 2px solid #59698d;
@@ -113,7 +113,7 @@ body{
 
 	/* Home Page */
 	.container .jumbotron{
-		background:url('pic1_992.jpg') no-repeat;
+		background:url('pic1_1200px.jpg') no-repeat;
 		height: 558px;
 		box-shadow: 0 0 50px #59698d;
 		border: 2px solid #59698d;
@@ -166,4 +166,172 @@ body{
 		box-shadow: 0 0 50px #59698d;
 		border: 2px solid #59698d;
 	}
+}
+
+/*************************************** Posts *******************************/
+.section {  
+  clear: margin;
+  position: relative;
+  color: black;
+  background-color: #7cb342;
+  padding: 10px;
+  padding-top: 45px;
+  font-size: 100%;
+  border:1px solid black;
+  margin-left: 15px;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  }  
+
+
+ .header1{
+    background-color:#aeea00 ;         
+    color: black;
+    }
+   .header2{
+    background-color:#aeea00 ;
+    color: #F8F8FF;  
+   }
+   .header3{
+    background-color:#aeea00 ;
+    color: black;   
+   }
+
+
+@media (min-width: 992px) {  
+  .col-lg-1, .col-lg-2, .col-lg-3,
+  .col-lg-4, .col-lg-5, .col-lg-6,
+  .col-lg-7, .col-lg-8, .col-lg-9,
+  .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    margin: auto;    
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {  
+  .col-md-1, .col-md-2, .col-md-3,
+  .col-md-4, .col-md-5, .col-md-6,
+  .col-md-7, .col-md-8, .col-md-9,
+  .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+    margin: auto;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}  
+
+***@media (max-width: 767px){  
+  .col-sm-1, .col-sm-2, .col-sm-3,
+  .col-sm-4, .col-sm-5, .col-sm-6,
+  .col-sm-7, .col-sm-8, .col-sm-9,
+  .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+    margin: auto;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
 }
